--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "for practice",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +18,10 @@
     "extends": "standard"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "axios": "1.4.0",
+    "cheerio": "1.0.0-rc.12",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
     "express": "4.18.2"
   }
 }
